* Allow decorator caching options to accept non null/undefined falsey values. [jddalton]

* Reduce recursion in the element cloner() function and make getScripts() absorb getByTagName(). [jddalton]

* Optimize NodeList modification methods by creating an element/fragment once instead of for each iteration. [jddalton]

* Add fuse.dom.HTMLElement and move HTML related methods from fuse.dom.Element to HTMLElement. [jddalton]

* Remove partial support for elements being passed to fuse.Object.toJSON(). [jddalton]

* Make fuse.dom.Element#show work with elements hidden by stylesheet rules. [jddalton Joe Gornick]

* Add table of default attribute values so fuse.dom.Element#getAttribute may consistently resolve them across browsers. [fabiomcosta, jddalton] 

* Add ability to exit early from fuse.Object.each() by returning false from the callback and allow setting the `this` of the callback. [jddalton]

* Make fuse.Object.getClassOf() more closely follow the spirit of the specification and throw a TypeError when passed an undefined or null value. [jddalton, kangax]

* When in debug mode execute event handlers separately from the loop iterating over them allowing all handlers to execute despite errors that may be thrown. [jddalton]

* Add fuse.debug detection for the window's url containing `fusejs_debug` in the query or `debug` in the fusejs script src query to trigger debug mode. [jddalton]
  Note: fuse.debug will take the value of debug query param. For example, if debug=2 then fuse.debug would equal 2.

* Fix Chrome Date#toJSON throwing errors when its result is not a primitive. [jddalton]

* Ensure decorators are created when fuse.dom.Element#observe is called with a raw element as its `this`. [jddalton, Joe Gornick]

* Avoid a conflict with the document's data id by initializing IE's unqiueNumber property on a dummy element. [jddalton]

* Change fuse.ajax.Updater `insertion` option to `updateBy`. [jddalton]
  Note: Backwards compatibility warning.
