@@ -1,7 +1,10 @@
   /*------------------------------- LANG: HTML -------------------------------*/
 
   (function(plugin) {
-    var rawReplace = plugin.replace.raw,
+
+    var rawIndexOf = plugin.indexOf.raw,
+
+    rawReplace = plugin.replace.raw,
 
     // tag parsing instructions:
     // http://www.w3.org/TR/REC-xml-names/#ns-using
@@ -23,14 +26,14 @@
       var div     = fuse._div,
        container  = fuse._doc.createElement('pre'),
        textNode   = container.appendChild(fuse._doc.createTextNode('')),
-       reTagEnds  = />/g,
+       reEsAmp    = /&amp;/g,
+       reEsLt     = /&lt;/g,
+       reEsGt     = /&gt;/g,
+       reUnAmp    = /&/g,
+       reUnLt     = /</g,
+       reUnGt     = />/g,
        reTokens   = /@fuseTagToken/g,
        swapTags   = [],
-
-      escapeHTML = function escapeHTML() {
-        textNode.data = String(this);
-        return fuse.String(container.innerHTML);
-      },
 
       getText = function() {
         return div.textContent;
@@ -45,16 +48,40 @@
         return swapTags.pop();
       },
 
-      unescapeHTML = function unescapeHTML() {
-        // tokenize tags before setting innerHTML then swap them after
-        var tokenized, string = this;
-        if (tokenized = string.indexOf('<') > -1) {
-          string = plugin.replace.call(string, reTags, swapTagsToTokens);
+      // entity definitions
+      // http://www.w3.org/TR/html401/sgml/intro.html
+      escapeHTML = function escapeHTML(all) {
+        var result;
+        if (all) {
+          textNode.data = String(this);
+          result = container.innerHTML;
+        } else {
+          result = rawReplace
+            .call(this, reUnAmp, '&amp;')
+            .replace(reUnLt, '&lt;')
+            .replace(reUnGt, '&gt;');
         }
-        div.innerHTML = '<pre>' + string + '<\/pre>';
+        return fuse.String(result);
+      },
+
+      unescapeHTML = function unescapeHTML(all) {
+        // tokenize tags before setting innerHTML then swap them after
+        var tokenized, result = this;
+        if (tokenized = rawIndexOf.call(result, '<') > -1) {
+          result = plugin.replace.call(result, reTags, swapTagsToTokens);
+        }
+        if (all) {
+          div.innerHTML = '<pre>' + result + '<\/pre>';
+          result = getText();
+        } else {
+          result = rawReplace
+            .call(result, reEsLt, '<')
+            .replace(reEsGt, '>')
+            .replace(reEsAmp, '&');
+        }
         return fuse.String(tokenized
-          ? plugin.replace.call(getText(), reTokens, swapTokensToTags)
-          : getText());
+          ? plugin.replace.call(result, reTokens, swapTokensToTags)
+          : result);
       };
 
       // Safari 2.x has issues with escaping html inside a `pre`
@@ -64,17 +91,25 @@
         textNode = (container = fuse._doc.createElement('xmp'))
           .appendChild(fuse._doc.createTextNode(''));
       }
+
       // Safari 3.x has issues with escaping the ">" character
       textNode.data = '>';
       if (container.innerHTML != '&gt;') {
-        escapeHTML = function escapeHTML() {
-          textNode.data = String(this);
-          return fuse.String(container.innerHTML.replace(reTagEnds, '&gt;'));
+        var __escapeHTML = escapeHTML;
+        escapeHTML = function escapeHTML(all) {
+          var result;
+          if (all) {
+            textNode.data = String(this);
+            result = fuse.String(rawReplace.call(container.innerHTML, reUnGt, '&gt;'));
+          } else {
+            result = __escapeHTML.call(this);
+          }
+          return result;
         };
       }
+
       if (!envTest('ELEMENT_TEXT_CONTENT')) {
         div.innerHTML = '<pre>&lt;p&gt;x&lt;\/p&gt;<\/pre>';
-
         if (envTest('ELEMENT_INNER_TEXT') && div.firstChild.innerText == '<p>x<\/p>') {
           getText = function() { return div.firstChild.innerText.replace(/\r/g, ''); };
         }
@@ -89,8 +124,9 @@
           };
         }
       }
+
       // lazy define methods
-      plugin.escapeHTML   = escapeHTML;
+      plugin.escapeHTML = escapeHTML;
       plugin.unescapeHTML = unescapeHTML;
 
       return plugin[arguments[0]];
